--- a/app/src/main/res/layout/toolbar_actionbar.xml
+++ b/app/src/main/res/layout/toolbar_actionbar.xml
@@ -6,4 +6,20 @@
     android:layout_height="wrap_content"
     android:minHeight="50dp"
     android:background="#3ad40b"
-/>
+    android:padding="0dp">
+    
+    <!--<LinearLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent">-->
+
+        <Button
+            android:layout_width="50dp"
+            android:layout_height="50dp" />
+
+        <Button
+            android:layout_width="50dp"
+            android:layout_height="50dp" />
+
+    <!--</LinearLayout>-->
+
+</android.support.v7.widget.Toolbar>
