--- a/app/src/main/res/layout/view_xtt2.xml
+++ b/app/src/main/res/layout/view_xtt2.xml
@@ -1,6 +1,6 @@
 <merge xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <include layout="@layout/toolbar_actionbar"/>
+    <include layout="@layout/layout_main_toolbar"/>
 
     <android.support.v4.widget.DrawerLayout
         android:id="@+id/drawer_layout"
@@ -12,8 +12,7 @@
             android:layout_marginTop="50dp"
             android:layout_width="match_parent"
             android:layout_height="30dp"
-            android:background="#fafafa"
-            />
+            android:background="#fafafa" />
 
     </android.support.v4.widget.DrawerLayout>
 
