Added navigation spinner

--- a/app/src/main/res/layout/layout_main_toolbar.xml
+++ b/app/src/main/res/layout/layout_main_toolbar.xml
@@ -1,34 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/recommender_toolbar"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/nav"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:minHeight="50dp"
+    android:height="50dp"
     android:background="#3ad40b"
     app:contentInsetLeft="0dp"
     app:contentInsetStart="0dp">
     
     <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true">
 
         <Button
             android:id="@+id/nav_btn_prev"
             android:layout_width="50dp"
-            android:layout_height="50dp" />
-
-        <Spinner
-            android:id="@+id/nav_sel_tab"
-            android:layout_width="wrap_content"
             android:layout_height="50dp"
-            android:layout_toLeftOf="@id/nav_btn_prev" />
+            android:layout_alignParentLeft="true" />
 
         <Button
             android:id="@+id/nav_btn_next"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:layout_toLeftOf="@id/nav_sel_tab" />
+            android:layout_alignParentRight="true" />
+
+        <Spinner
+            android:id="@+id/nav_sel_tab"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:spinnerMode="dropdown"
+            android:layout_toLeftOf="@id/nav_btn_next"
+            android:layout_toRightOf="@id/nav_btn_prev" />
 
     </RelativeLayout>
 
