--- a/app/src/main/res/layout/view_xtt2.xml
+++ b/app/src/main/res/layout/view_xtt2.xml
@@ -11,8 +11,15 @@
             android:id="@+id/content_frame"
             android:layout_marginTop="50dp"
             android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:background="#fafafa" />
+            android:layout_height="match_parent"
+            android:background="#ededed">
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/rules_recycler_view"
+                android:scrollbars="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+        </FrameLayout>
 
     </android.support.v4.widget.DrawerLayout>
 
