--- a/app/src/main/res/layout/view_xtt2.xml
+++ b/app/src/main/res/layout/view_xtt2.xml
@@ -5,11 +5,11 @@
     <android.support.v4.widget.DrawerLayout
         android:id="@+id/drawer_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginTop="50dp">
 
         <FrameLayout
             android:id="@+id/content_frame"
-            android:layout_marginTop="50dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="#ededed">
