--- a/app/src/main/res/layout/view_rule_card.xml
+++ b/app/src/main/res/layout/view_rule_card.xml
@@ -14,18 +14,12 @@
     <LinearLayout
         android:id="@+id/card_layout"
         android:orientation="horizontal"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="left"
         android:paddingTop="15dp"
         android:paddingBottom="15dp"
         android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        >
+        android:paddingRight="10dp" />
 
-    </LinearLayout>
-    <!--<TextView-->
-        <!--android:id="@+id/info_text"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="100dp"-->
-        <!--android:textAlignment="center" />-->
 </android.support.v7.widget.CardView>
