--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,9 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="xtt2android.pl.edu.agh.eis.xtt2android.MainActivity">
+    tools:context=".activities.MainActivity">
 
-    <xtt2android.pl.edu.agh.eis.xtt2android.view.Xtt2View
+    <xtt2android.pl.edu.agh.eis.xtt2android.views.Xtt2View
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
