--- a/app/src/main/res/layout/view_xtt2.xml
+++ b/app/src/main/res/layout/view_xtt2.xml
@@ -1,12 +1,13 @@
 <merge xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <include layout="@layout/layout_main_links"/>
     <include layout="@layout/layout_main_toolbar"/>
 
     <android.support.v4.widget.DrawerLayout
-        android:id="@+id/drawer_layout"
+        android:id="@+id/cards_panel"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="50dp">
+        android:layout_marginTop="65dp">
 
         <FrameLayout
             android:id="@+id/content_frame"
