--- a/app/src/main/res/layout/view_formulae_list_dialog.xml
+++ b/app/src/main/res/layout/view_formulae_list_dialog.xml
@@ -1,24 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
     <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="left"
-        android:paddingTop="20dp"
-        android:paddingBottom="20dp"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp">
+        android:layout_gravity="start"
+        android:paddingTop="5dp">
 
-        <!--<android.support.v7.widget.RecyclerView-->
-            <!--android:id="@+id/formulae_value_recycler_view"-->
-            <!--android:scrollbars="vertical"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="match_parent"/>-->
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/formulae_value_recycler_view"
+            android:scrollbars="vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="200dp"/>
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/button_formulae_value_add" />
+
     </LinearLayout>
 
