--- a/app/src/main/res/layout/view_formulae_value_card.xml
+++ b/app/src/main/res/layout/view_formulae_value_card.xml
@@ -1,33 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/formulate_value_view"
-    android:layout_gravity="center"
+    android:layout_height="match_parent"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
     android:layout_marginTop="5dp"
     android:layout_marginLeft="5dp"
-    android:layout_marginRight="5dp"
-    card_view:cardCornerRadius="4dp">
+    android:layout_marginRight="5dp">
 
-    <HorizontalScrollView
-        android:layout_width="match_parent"
+    <android.support.v7.widget.CardView
+        android:id="@+id/formulate_value_view"
+        android:layout_gravity="center"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:scrollbarSize="3dp"
-        android:scrollbarStyle="insideOverlay">
+        android:layout_weight="1"
+        android:layout_margin="1dp"
+        card_view:cardCornerRadius="4dp">
 
-        <LinearLayout
-            android:id="@+id/formulae_value_layout"
-            android:orientation="horizontal"
-            android:layout_width="wrap_content"
+        <HorizontalScrollView
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="left"
-            android:paddingTop="20dp"
-            android:paddingBottom="20dp"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp" />
+            android:scrollbarSize="3dp"
+            android:scrollbarStyle="insideOverlay">
 
-    </HorizontalScrollView>
+            <LinearLayout
+                android:id="@+id/formulae_value_layout"
+                android:orientation="horizontal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp" />
 
-</android.support.v7.widget.CardView>
+        </HorizontalScrollView>
+
+    </android.support.v7.widget.CardView>
+
+    <Button
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_gravity="center"
+        android:textAlignment="center"
+        android:textSize="10sp"
+        android:text="X"/>
+</LinearLayout>
