--- a/app/src/main/res/layout/layout_main_links.xml
+++ b/app/src/main/res/layout/layout_main_links.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/hidden_panel"
+    android:id="@+id/links_panel"
     android:layout_width="match_parent"
     android:layout_height="50dp"
     android:background="#3ad40b"
