--- a/app/src/main/res/layout/view_formulae_list_dialog.xml
+++ b/app/src/main/res/layout/view_formulae_list_dialog.xml
@@ -14,6 +14,7 @@
             android:layout_height="200dp"/>
 
         <Button
+            android:id="@+id/formulae_value_add"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/button_formulae_value_add" />
