--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".activities.MainActivity">
+    tools:context="app.MainActivity">
 
     <!--<xtt2android.pl.edu.agh.eis.xtt2android.views.Xtt2View-->
         <!--android:layout_width="match_parent"-->
